<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_APP"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:layout_marginStart="177dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="176dp"
        android:text="@string/app_name1"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="112dp"
        android:text="@string/SignUp"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/log_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_APP"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="112dp"
        android:onClick="onButtonClick1"
        android:text="@string/LogIn"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_up"
        app:layout_constraintTop_toBottomOf="@+id/textView_APP"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>