<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Log_In"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <EditText
        android:id="@+id/username"
        android:layout_width="312dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/Email_Username"
        android:inputType="textEmailAddress"
        android:text="@string/Email_Username"
        android:textColor="@color/color_black"
        android:textColorHighlight="@color/color_black"
        android:textColorHint="@color/color_black"
        android:textColorLink="@color/color_black"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLog" />

    <EditText
        android:id="@+id/password"
        android:layout_width="312dp"
        android:layout_height="43dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:text="@string/Password"
        android:textColor="@color/color_black"
        android:textColorHighlight="@color/color_black"
        android:textColorHint="@color/color_black"
        android:textColorLink="@color/color_black"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/textViewLog"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:text="@string/LogIn"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texto"
        android:layout_width="146dp"
        android:layout_height="61dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shapes"
        android:drawableStart="@drawable/shapes"
        android:drawableTop="@drawable/shapes"
        android:drawableEnd="@drawable/shapes"
        android:drawableBottom="@drawable/shapes"
        android:text="@string/Texto"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/radioButton"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="152dp"
        android:buttonTint="@color/color_black"
        android:checked="false"
        android:textColor="@color/color_black"
        android:textColorHighlight="@color/color_black"
        android:textColorLink="@color/color_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/LogIn"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto" />

    <TextView
        android:id="@+id/NoAccount"
        android:layout_width="90dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contextClickable="true"
        android:linksClickable="true"
        android:text="@string/No_Account"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textColorHighlight="@color/blue"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogIn" />

    <TextView
        android:id="@+id/Forget"
        android:layout_width="158dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contextClickable="true"
        android:linksClickable="true"
        android:text="@string/Forget"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textColorHighlight="@color/blue"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoAccount"
        app:layout_constraintVertical_bias="0.148" />

</android.support.constraint.ConstraintLayout>